<resources>
    <string name="app_name">Electronics Shop</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>