<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/username"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:layout_marginTop="50dp"
        android:drawableStart="@drawable/ic_baseline_account_circle_24" />


    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_baseline_lock_24" />

    <Button
        android:id="@+id/login_button_signin"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/custom_button"
        android:layout_marginTop="50dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account" />

        <TextView
            android:id="@+id/login_goto_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:layout_marginStart="10dp" />

    </LinearLayout>

</LinearLayout>